tests/ui/structured_unknown.rs
use openrouter_toolkit::structured_model;

const MODEL: &str = structured_model!("example/not-a-real-model");

fn main() {
    let _ = MODEL;
}
